# R.E.D.S.E.A

./: .gitignore  README.md  bandwidth_monitor.py
camera_pkg/: package.xml  setup.py
camera_pkg/camera_pkg/: camera_node.py  yolo_firetruck_node.py  yolo_trafficlight_node.py
camera_pkg/launch/: camera_system.launch.py
debug_pkg/: package.xml  setup.py
debug_pkg/debug_pkg/: firetruck_visualizer_node.py
emergency_hud/: README.md  package.xml  setup.cfg  setup.py  test_publisher.py
emergency_hud/config/: config.json  i18n.json
emergency_hud/emergency_hud/: emergency_hud_node.py
emergency_hud/launch/: emergency_hud.launch.py
handle.ino/: handle.ino
handle.ino/handle/: handle.ino
haptic_steering_pkg/: package.xml  setup.cfg  setup.py
haptic_steering_pkg/haptic_steering_pkg/: haptic_steering_node.py
integrated_control_pkg/: README.md  package.xml  setup.cfg  setup.py
integrated_control_pkg/integrated_control_pkg/: __init__.py  integrated_control_node.py
integrated_control_pkg/launch/: integrated_control.launch.py  laptop.launch.py  raspberry_pi.launch.py
integrated_control_pkg/resource/: integrated_control_pkg
integrated_control_pkg/test/: test_copyright.py  test_flake8.py  test_pep257.py
interfaces_pkg/: CMakeLists.txt  package.xml
interfaces_pkg/msg/: BoundingBox3D.msg  Pose2D.msg
lane_detector_pkg/: package.xml  setup.cfg  setup.py
lane_detector_pkg/config/: params.yaml
lane_detector_pkg/lane_detector_pkg/: lane_detector_node.py  lane_state_switcher.py
lane_detector_pkg/launch/: lane_info.launch.py
lane_detector_pkg/resource/: lane_detector_pkg
siren_pkg/: package.xml  setup.cfg  setup.py
siren_pkg/launch/: siren.launch.py
siren_pkg/siren_pkg/: image_viewer_node.py  siren_detector_node.py  siren_node.py
velocity_pkg/: README.md  package.xml  setup.cfg  setup.py  velocity_visualizer.py
velocity_pkg/test/: test_copyright.py  test_flake8.py  test_pep257.py
velocity_pkg/velocity_pkg/: __init__.py  velocity_node.py
