<?xml version="1.0"?>
<package format="3">
  <name>camera_pkg</name>
  <version>0.0.1</version>
  <description>ROS2 nodes for rear camera publishing and YOLO firetruck detection</description>
  <maintainer email="dh08080@khu.ac.kr">daehyeon</maintainer>
  <license>MIT</license>

  <!-- 기존 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_srvs</depend>
  <depend>interfaces_pkg</depend>

  <!-- 추가(필수/권장) -->
  <depend>rcl_interfaces</depend>
  <depend>lifecycle_msgs</depend>

  <!-- 런치 사용 시 권장 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Python OpenCV 직접 사용 시 권장 -->
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>