<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>debug_pkg</name>
  <version>0.0.0</version>
  <description>Debug and visualization tools for emergency vehicle detection</description>
  <maintainer email="dh08080@khu.ac.kr">daehyeon</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS2 core dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interfaces_pkg</depend>

  <!-- For image handling and sync -->
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>

  <!-- External ML and vision libraries -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>ultralytics</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>